# Movie_recommender

./: advanced_analyzer.py  error_summary.txt  log_analyzer.py  questions_day2.txt  visual_analyzer.py
Projects/Movie_recommendation/: Dockerfile  config.yaml  movies.csv  pyproject.toml  recommender.py
Projects/Movie_recommendation/movie_recommendation.egg-info/: PKG-INFO  SOURCES.txt
Projects/Movie_recommendation/tests/: test_recommend.py
